force-app/main/default/objects/EmailDomain__c/EmailDomain__c.object-meta.xml
<CustomObject>
    <label>Email Domain</label>
    <nameField>
        <label>Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>