force-app/main/default/objects/EmailDomain__c/fields/Exclude_NAL_tagging_from_Private_email__c.field-meta.xml
<CustomField>
    <fullName>Exclude_NAL_tagging_from_Private_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if email address domain type = Private and exclude NAL tagging from Private email= true -&gt; remove NAL tagging in Strategic Pod</description>
    <inlineHelpText>if email address domain type = Private and exclude NAL tagging from Private email= true -&gt; remove NAL tagging in Strategic Pod</inlineHelpText>
    <label>Exclude NAL tagging from Private email</label>
    <type>Checkbox</type>
</CustomField>