force-app/main/default/objects/EmailDomain__c/fields/Parent_Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Domain__c</fullName>
    <description>MIS-2871</description>
    <label>Parent Company Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>