force-app/main/default/objects/EmailDomain__c/fields/Strategic_Pod__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Pod__c</fullName>
    <description>MIS-2871</description>
    <label>Strategic Pod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Strategic_Pod</valueSetName>
    </valueSet>
</CustomField>