force-app/main/default/objects/EmailDomain__c/fields/SWID__c.field-meta.xml
<CustomField>
    <fullName>SWID__c</fullName>
    <label>SWID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>