force-app/main/default/objects/EmailDomain__c/fields/SWID_Parent__c.field-meta.xml
<CustomField>
    <fullName>SWID_Parent__c</fullName>
    <label>SWID - Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>