force-app/main/default/objects/EmailDomain__c/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <label>Ticker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>