force-app/main/default/objects/EmailDomain__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Named Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Email_Domains</relationshipName>
    <type>Lookup</type>
</CustomField>