force-app/main/default/objects/EmailDomain__c/recordTypes/Agencies.recordType-meta.xml
<RecordType>
    <fullName>Agencies</fullName>
    <active>true</active>
    <description>New type of Email Domain for the Account/Lead mapping for 2022.</description>
    <label>Agencies</label>
</RecordType>