force-app/main/default/objects/EmailDomain__c/recordTypes/Channel_Partners.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partners</fullName>
    <active>true</active>
    <description>MIS-4789</description>
    <label>Strategic Consultancies</label>
</RecordType>