force-app/main/default/objects/EmailDomain__c/recordTypes/Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Enterprise</fullName>
    <active>true</active>
    <label>Enterprise</label>
</RecordType>