force-app/main/default/objects/EmailDomain__c/recordTypes/France.recordType-meta.xml
<RecordType>
    <fullName>France</fullName>
    <active>false</active>
    <description>MIS-4789</description>
    <label>France</label>
</RecordType>