force-app/main/default/objects/EmailDomain__c/recordTypes/Free.recordType-meta.xml
<RecordType>
    <fullName>Free</fullName>
    <active>true</active>
    <label>Free</label>
</RecordType>