force-app/main/default/objects/EmailDomain__c/recordTypes/Investors.recordType-meta.xml
<RecordType>
    <fullName>Investors</fullName>
    <active>false</active>
    <description>MIS-4789</description>
    <label>Investors</label>
</RecordType>