force-app/main/default/objects/EmailDomain__c/recordTypes/Junk_Emails.recordType-meta.xml
<RecordType>
    <fullName>Junk_Emails</fullName>
    <active>false</active>
    <label>Junk Emails</label>
</RecordType>