force-app/main/default/objects/EmailDomain__c/recordTypes/Strategic.recordType-meta.xml
<RecordType>
    <fullName>Strategic</fullName>
    <active>true</active>
    <description>MIS-4789  North America Stratigic Domains List</description>
    <label>Strategic North America</label>
</RecordType>