force-app/main/default/objects/EmailDomain__c/recordTypes/Strategic_APAC.recordType-meta.xml
<RecordType>
    <fullName>Strategic_APAC</fullName>
    <active>true</active>
    <description>New type of Email Domain for the Account/Lead mapping for 2022.</description>
    <label>Strategic APAC</label>
</RecordType>