force-app/main/default/objects/EmailDomain__c/recordTypes/Strategic_DACH.recordType-meta.xml
<RecordType>
    <fullName>Strategic_DACH</fullName>
    <active>false</active>
    <description>MIS-4789  New type of Email Domain for the Account/Lead mapping for 2023</description>
    <label>Strategic DACH</label>
</RecordType>