force-app/main/default/objects/EmailDomain__c/recordTypes/Strategic_JP.recordType-meta.xml
<RecordType>
    <fullName>Strategic_JP</fullName>
    <active>true</active>
    <description>MIS-5308: Reactivated ** MIS-3311: Deactivated</description>
    <label>Strategic JP</label>
</RecordType>