force-app/main/default/objects/EmailDomain__c/recordTypes/Strategic_ROW.recordType-meta.xml
<RecordType>
    <fullName>Strategic_ROW</fullName>
    <active>true</active>
    <description>MIS-4789  Rest Of the World MIS-3311: Deactivated</description>
    <label>Strategic EMEA</label>
</RecordType>