force-app/main/default/objects/EmailDomain__c/recordTypes/Strategic_UK.recordType-meta.xml
<RecordType>
    <fullName>Strategic_UK</fullName>
    <active>false</active>
    <description>MIS-4789  New type of Email Domain for the Account/Lead mapping for 2023</description>
    <label>Strategic UK</label>
</RecordType>