force-app/main/default/objects/EmailDomain__c/validationRules/Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				Name=VLOOKUP( $ObjectType.EmailDomain__c.Fields.Name, $ObjectType.EmailDomain__c.Fields.Name,Name),
				OR(
								ischanged(Name),
								ISNEW()
								)
				)</errorConditionFormula>
    <errorMessage>This Email Domain already exist in the system.</errorMessage>
</ValidationRule>