force-app/main/default/objects/EmailDomain__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Parent_Company_Domain__c</columns>
    <columns>Strategic_Pod__c</columns>
    <columns>Record_Type_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>yahoo.com</value>
    </filters>
    <label>All</label>
</ListView>